--- a/adminbsb/css/app.css
+++ b/adminbsb/css/app.css
@@ -42,3 +42,20 @@ ul.live-search-list li:hover {
 .label {
     border-radius: 8px 8px 8px 8px;
 }
+
+.cover {
+    padding-top: 10px;
+}
+
+.cover:hover {
+    z-index: 4;
+    transition: all 2s;
+    -o-transition: all 2s;
+    -moz-transition: all 2s;
+    -webkit-transition: all 2s;
+    transform: scale(2);
+    -moz-transform: scale(2);
+    -o-transform: scale(2);
+    -webkit-transform: scale(2);
+    box-shadow: 2px 2px 6px rgba(0,0,0,2);
+}
